# glyphs-plist

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build-test.yml
glyphs_plist/: Cargo.toml
glyphs_plist/src/: font.rs  from_plist.rs  lib.rs  norad_interop.rs  plist.rs  to_plist.rs
glyphs_plist/testdata/: FloatNames.glyphs  GlyphsFileFormatv3.glyphs  LayerTypes.glyphs  MetricsKeys.glyphs  NewFontG3.glyphs
glyphs_plist/tests/: lib.rs
glyphs_plist_derive/: Cargo.toml
glyphs_plist_derive/src/: lib.rs
