[package]
name = "glyphs_plist"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glyphs_plist_derive = { path = "../glyphs_plist_derive" }
kurbo = "0.11"
norad = { version = "0.16", features = ["kurbo"] }
thiserror = "2"

[dev-dependencies]
maplit = "1.0.2"
proptest = "1.0.0"
